# RustSMSSystem

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-09-18-063100-0000_create_sms/: up.sql
sms-frontend/: package-lock.json  package.json
sms-frontend/src/: App.tsx
sms-frontend/src/components/: SMSList.tsx  SendSMS.tsx
sms-frontend/src/services/: api.ts
src/: main.rs  models.rs  schema.rs
