[package]
name = "sms_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database ORM
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }

# For environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
chrono = { version = "0.4.42", features = ["serde"] }

#API intergration
reqwest = { version = "0.12", features = ["json"] }
